--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -71,6 +71,7 @@
 @layer base {
   * {
     @apply border-border;
+    @apply font-open-sans;
   }
   body {
     @apply bg-background text-foreground;
